--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfoolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vso24saega.ita.voco.ee/portfolio/",
+  "homepage": "https://vso24saega.ita.voco.ee/home",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
