Portfolio 2.4.2 - redirection patch

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfoolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://vso24saega.ita.voco.ee/home",
